# poker-fold

./: .ghci  .gitignore  .hlint.yaml  ChangeLog.md  LICENSE  cabal.project  hie.yaml  phoker.cabal  poker-fold.cabal  poker.cabal  readme.md  readme.org  stack.yaml  strategy.md
app/: adapt.hs  cohorts.hs  hvs7.hs  opt.hs  perf.hs  poker.hs  speed.hs  writes.hs
other/: some.str
src/: Poker.hs
src/Poker/: Action.hs  Belief.hs  Card.hs  Charts.hs  Equity.hs  Evaluate.hs  HandRank.hs  Lexico.hs  Policy.hs  Random.hs  Range.hs  RangedHand.hs  RangedHole.hs  SimpleBelief.hs  Strategy.hs  Table.hs  Types.hs
src/Poker/Card/: Iso.hs  Storable.hs
src/Poker/HandRank/: List.hs  Storable.hs
test/: test.hs
