cabal-version: 2.4
name:          poker-fold
version:       0.0.1
synopsis: A poker library
description: A poker library exploring holdem strategy.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) AfterTimes
license: BSD-3-Clause
homepage: https://github.com/tonyday567/poker-fold#readme
bug-reports: https://github.com/tonyday567/poker-fold/issues
build-type: Simple
extra-doc-files:
  other/*.svg
source-repository head
  type: git
  location: https://github.com/tonyday567/poker-fold

library
  hs-source-dirs:
    src
  default-extensions:
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -O2
  build-depends:
    adjunctions >= 4.4 && < 4.5,
    base >=4.7 && <5,
    chart-svg ^>= 0.2.3,
    containers >= 0.6 && < 0.7,
    distributive >= 0.6 && < 0.7,
    microlens >= 0.4 && < 0.5,
    mtl >= 2.2.2 && < 2.3,
    numhask-array ^>= 0.9,
    numhask-space ^>= 0.8.1,
    random ^>=1.2,
    text ^>= 1.2,
    vector ^>= 0.12.3,
    vector-algorithms,
    vector-mmap,
    poker-base,
    prettyprinter,
  exposed-modules:
    Poker.RangedHand
    Poker.Evaluate
    Poker.Charts
    Poker.Random
    Poker.Table
    Poker.Card.Storable
  other-modules:
  default-language: Haskell2010

executable poker-speed
  main-is: speed.hs
  hs-source-dirs:
    app
  build-depends:
    base >=4.7 && <5,
    poker-fold,
    perf,
    containers,
    chart-svg,
    mtl ^>= 2.2.2,
    random ^>= 1.2,
    text ^>= 1.2,
    vector,
    vector-algorithms,
    poker-base,
    optparse-applicative,
  default-language: Haskell2010
  default-extensions:
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -funbox-strict-fields
    -rtsopts
    -threaded
    -O2
executable poker-hvs7
  main-is: hvs7.hs
  hs-source-dirs:
    app
  build-depends:
    base >=4.7 && <5,
    poker-fold,
    optparse-applicative,
  default-language: Haskell2010
  default-extensions:
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -funbox-strict-fields
    -threaded
    -rtsopts
    -O2
