cabal-version: 2.4
name:          poker-fold
version:       0.0.1
synopsis: A poker (haskell) library
description: An experimental poker library building on poker-base, focused on
    .
    - fast evaluation
    .
    - poker algorithms and intelligence
    .
    - game strategy
    .
    ![odds](other/odds2.svg)

category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) AfterTimes
license: BSD-3-Clause
homepage: https://github.com/tonyday567/poker-fold#readme
bug-reports: https://github.com/tonyday567/poker-fold/issues
build-type: Simple
extra-doc-files:
  other/*.svg
source-repository head
  type: git
  location: https://github.com/tonyday567/poker-fold

library
  hs-source-dirs:
    src
  default-extensions:
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -O2
  build-depends:
    adjunctions >= 4.4 && < 4.5,
    base >=4.7 && <5,
    chart-svg ^>= 0.3.0,
    containers >= 0.6 && < 0.7,
    distributive >= 0.6 && < 0.7,
    deepseq,
    formatn ^>= 0.2.1,
    moo,
    mtl >= 2.2.2 && < 2.3,
    numhask-array ^>= 0.10,
    numhask-space ^>= 0.10,
    optics-core ^>= 0.4,
    random ^>=1.2,
    text ^>= 1.2,
    vector ^>= 0.12.3,
    vector-algorithms,
    vector-mmap,
    perf,
    poker-base,
    prettyprinter,
    generic-lens,
  exposed-modules:
    Poker.RangedHole
    Poker.Charts
    Poker.HandRank.List
    Poker.HandRank.Storable
    Poker.Lexico
    Poker.Random
    Poker.Table
    Poker.Card.Storable
  other-modules:
  default-language: Haskell2010

executable poker-fold-speed
  main-is: speed.hs
  hs-source-dirs:
    app
  build-depends:
    base >=4.7 && <5,
    poker-fold,
    perf ^>= 0.10,
    containers,
    chart-svg,
    formatn ^>= 0.2,
    mtl ^>= 2.2.2,
    random ^>= 1.2,
    text ^>= 1.2,
    vector,
    optics-core ^>= 0.4,
    deepseq,
    vector-algorithms,
    poker-base,
    prettyprinter,
    optparse-applicative,
  default-language: Haskell2010
  default-extensions:
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -funbox-strict-fields
    -rtsopts
    -threaded
    -O2
executable poker-fold-writes
  main-is: writes.hs
  hs-source-dirs:
    app
  build-depends:
    base >=4.7 && <5,
    poker-fold,
    optparse-applicative,
  default-language: Haskell2010
  default-extensions:
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -funbox-strict-fields
    -threaded
    -rtsopts
    -O2
