cabal-version: 2.4
name:          poker
version:       0.0.1
synopsis: See readme.md
description: See readme.md for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) AfterTimes
license: BSD-3-Clause
homepage: https://github.com/tonyday567/poker#readme
bug-reports: https://github.com/tonyday567/poker/issues
build-type: Simple
source-repository head
  type: git
  location: https://github.com/tonyday567/poker

library
  hs-source-dirs:
    src
  default-extensions:
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fwrite-ide-info
    -hiedir=.hie
  build-depends:
    adjunctions,
    distributive,
    base >=4.7 && <5,
    numhask >= 0.7 && < 0.8,
    numhask-array >= 0.8 && < 0.9,
    numhask-free >= 0.0.3 && < 0.1,
    containers,
    text,
    chart-svg,
    microlens,
    perf,
    vector,
    foldl,
    mealy,
  exposed-modules:
    Poker
  other-modules:
  default-language: Haskell2010

executable poker
  main-is: poker.hs
  hs-source-dirs: app
  build-depends:
    base >= 4.7 && < 5,
    numhask >= 0.7 && < 0.8,
    poker
  default-language: Haskell2010
  default-extensions:
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -fwrite-ide-info
    -hiedir=.hie

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
    test
  build-depends:
    base >=4.7 && <5,
    doctest >= 0.16 && < 0.18,
    numhask >= 0.7 && < 0.8,
    poker
  default-language: Haskell2010
  default-extensions:
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fwrite-ide-info
    -hiedir=.hie
