cabal-version: 2.4
name:          poker
version:       0.0.1
synopsis: A poker library
description: A poker library exploring holdem strategy.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) AfterTimes
license: BSD-3-Clause
homepage: https://github.com/tonyday567/poker#readme
bug-reports: https://github.com/tonyday567/poker/issues
build-type: Simple
extra-doc-files:
  other/*.svg
source-repository head
  type: git
  location: https://github.com/tonyday567/poker

library
  hs-source-dirs:
    src
  default-extensions:
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fwrite-ide-info
    -hiedir=.hie
  build-depends:
    adjunctions >= 4.4 && < 4.5,
    base >=4.7 && <5,
    chart-svg >= 0.2 && < 0.3,
    containers >= 0.6 && < 0.7,
    distributive >= 0.6 && < 0.7,
    foldl >= 1.4 && < 1.5,
    microlens >= 0.4 && < 0.5,
    mtl >= 2.2.2 && < 2.3,
    numhask >= 0.7 && < 0.8,
    numhask-array >= 0.8 && < 0.9,
    numhask-space >= 0.8.0 && < 0.9,
    text >= 1.2 && < 1.3,
    vector >= 0.12.3.0 && < 0.13,
    vector-algorithms,
    vector-mmap,
  exposed-modules:
    Poker
    Poker.Charts
    Poker.Random
    Poker.Types
  other-modules:
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
    test
  build-depends:
    base >=4.7 && <5,
    doctest >= 0.16 && < 0.18,
    numhask >= 0.7 && < 0.8,
    poker
  default-language: Haskell2010
  default-extensions:
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fwrite-ide-info
    -hiedir=.hie

executable speed
  main-is: speed.hs
  hs-source-dirs:
    app
  build-depends:
    base >=4.7 && <5,
    foldl,
    recursion-schemes,
    numhask >= 0.7 && < 0.8,
    poker,
    perf,
    containers,
    chart-svg,
    vector,
    vector-algorithms,
    vector-mmap,
  default-language: Haskell2010
  default-extensions:
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -funbox-strict-fields
    -fwrite-ide-info
    -hiedir=.hie
